<resources>
    <string name="app_name">EarthquakeApp</string>
    <string name="please_wait">Please wait</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="interesting_title">Interesting title</string>
    <string name="magnitude">Magnitude</string>
    <string name="giant_magnitude">Giant magnitude</string>
    <string name="location">Location</string>
    <string name="this_is_where_it_happened">This is where it happened</string>
</resources>